# sysand

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .prettierrc.mjs  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.alpine  Makefile  README.md  RELEASE.md  about.toml  deny.toml  pr-288-review-followups.md  renovate.json  renovate.json5  rust-toolchain.toml
bindings/java/: .gitignore  Cargo.toml  README.md  checkstyle.xml
bindings/java/java/: pom.xml
bindings/java/java-deploy-test/: pom.xml
bindings/java/java-test/: pom.xml
bindings/java/plugin/: pom.xml
bindings/java/scripts/: java-builder.py  run_chores.sh  run_tests.sh
bindings/java/src/: conversion.rs  exceptions.rs  exceptions_tests.rs  lib.rs
bindings/js/: .gitignore  Cargo.toml  README.md  eslint.config.cjs  eslint.config.js  package-lock.json  package.json  webpack-browser-test.config.cjs  webpack-browser.config.cjs
bindings/js/scripts/: run_chores.sh  run_tests.sh
bindings/js/spec/browser/: browser_basic.spec.js
bindings/js/spec/support/: jasmine-browser.mjs
bindings/js/src/: lib.rs  local_storage_utils.rs  panic_hook.rs
bindings/js/src/env/: local_storage.rs  mod.rs
bindings/js/src/io/: local_storage.rs  mod.rs
bindings/js/tests/: basic_browser.rs
bindings/py/: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  pyproject.toml  requirements-dev.txt
bindings/py/python/sysand/: __init__.py  __main__.py  _add.py  _build.py  _exclude.py  _include.py  _info.py  _init.py  _model.py  _new.py  _remove.py  _root.py  _sources.py
bindings/py/scripts/: run_chores.sh  run_tests.sh
bindings/py/src/: lib.rs
bindings/py/tests/: basic.rs  test_basic.py
core/: Cargo.toml  build.rs
core/scripts/: run_chores.sh  run_tests.sh
core/src/: auth.rs  auth_tests.rs  context.rs  discover.rs  index_utils.rs  iri_normalize.rs  lib.rs  lib_tests.rs  lock.rs  lock_tests.rs  model.rs  model_tests.rs  purl.rs  purl_tests.rs  stdlib.rs  style.rs  test_utils.rs  utils.rs  workspace.rs  workspace_tests.rs
core/src/commands/: add.rs  add_tests.rs  build.rs  build_tests.rs  exclude.rs  include.rs  info.rs  init.rs  lock.rs  lock_tests.rs  mod.rs  new.rs  publish.rs  publish_tests.rs  remove.rs  remove_tests.rs  root.rs  sources.rs  sync.rs  sync_tests.rs
core/src/commands/env/: install.rs  list.rs  mod.rs  uninstall.rs
core/src/commands/index/: add.rs  init.rs  mod.rs  mod_tests.rs  remove.rs  yank.rs
core/src/config/: local_fs.rs  local_fs_tests.rs  mod.rs  mod_tests.rs
core/src/env/: discovery.rs  discovery_tests.rs  index.rs  index_tests.rs  iri_normalize.rs  iri_normalize_tests.rs  local_directory.rs  memory.rs  memory_tests.rs  mod.rs  null.rs  reqwest_http.rs  reqwest_http_tests.rs  reqwest_index_http.rs  reqwest_index_http_tests.rs  utils.rs  utils_tests.rs
core/src/env/local_directory/: manifest.rs  metadata.rs  metadata_tests.rs  mod.rs  utils.rs
core/src/index/: iri.rs  mod.rs  model.rs
core/src/project/: any.rs  cached.rs  editable.rs  gix_git_download.rs  gix_git_download_tests.rs  index_entry.rs  index_entry_tests.rs  indexed_remote.rs  local_kpar.rs  local_kpar_tests.rs  local_src.rs  memory.rs  mod.rs  mod_tests.rs  null.rs  reference.rs  reference_tests.rs  reqwest_kpar_download.rs  reqwest_kpar_download_tests.rs  reqwest_kpar_ranged.rs  reqwest_src.rs  reqwest_src_tests.rs  utils.rs  utils_tests.rs
core/src/resolve/: combined.rs  combined_tests.rs  env.rs  file.rs  gix_git.rs  gix_git_tests.rs  memory.rs  mod.rs  net_utils.rs  null.rs  priority.rs  priority_tests.rs  remote.rs  replace.rs  reqwest_http.rs  reqwest_http_tests.rs  sequential.rs  sequential_tests.rs  standard.rs  typed_resolver.rs
core/src/solve/: mod.rs  pubgrub.rs  pubgrub_tests.rs
core/src/stdlib_assets/: analysis-library.meta.json  data-type-library.project.json  function-library.meta.json  function-library.project.json  quantities-and-units-library.meta.json  requirement-derivation-library.project.json  systems-library.meta.json
core/src/stdlib_assets/20230201/: analysis-library.meta.json  analysis-library.project.json  cause-and-effect-library.meta.json  cause-and-effect-library.project.json  data-type-library.meta.json  data-type-library.project.json  function-library.meta.json  function-library.project.json  geometry-library.meta.json  geometry-library.project.json  metadata-library.meta.json  metadata-library.project.json  quantities-and-units-library.meta.json  quantities-and-units-library.project.json  requirement-derivation-library.meta.json  requirement-derivation-library.project.json  semantic-library.meta.json  semantic-library.project.json  systems-library.meta.json  systems-library.project.json
core/src/stdlib_assets/20250201/: analysis-library.meta.json  analysis-library.project.json  cause-and-effect-library.meta.json  cause-and-effect-library.project.json  data-type-library.meta.json  data-type-library.project.json  function-library.project.json  geometry-library.meta.json  geometry-library.project.json  metadata-library.meta.json  (+9 more)
core/src/symbols/: lex.rs  mod.rs  mod_tests.rs
core/src/workspace/: inheritance.rs  mod.rs  resolved_project.rs  tests.rs  types.rs
core/tests/: filesystem_env.rs  index_management.rs  memory_env.rs  memory_init.rs  memory_new.rs  project_derive.rs  project_no_derive.rs
macros/: Cargo.toml
macros/src/: lib.rs
sysand/: Cargo.toml
sysand/scripts/: run_chores.sh  run_tests.sh
sysand/src/: cli.rs  env_vars.rs  error.rs  lib.rs  logger.rs  main.rs  style.rs
sysand/src/commands/: add.rs  build.rs  clone.rs  env.rs  exclude.rs  include.rs  index.rs  info.rs  init.rs  lock.rs  mod.rs  new.rs  print_root.rs  publish.rs  remove.rs  sources.rs  sync.rs
sysand/tests/: cfg_base.rs  cli_add_remove.rs  cli_base.rs  cli_build.rs  cli_clone.rs  cli_env.rs  cli_exp_add_remove.rs  cli_include_exclude.rs  cli_info.rs  cli_init.rs  cli_lock.rs  cli_new.rs  cli_publish.rs  cli_source.rs  cli_sync.rs  discover.rs
sysand/tests/common/: mod.rs
sysand/tests/data/: test_lib.kpar
(+251 files in other folders)
