[workspace]
resolver = "3"
members = [
  "sysand",
  "core",
  "macros",
  "bindings/py",
  "bindings/js",
  "bindings/java",
]
default-members = ["sysand", "core"]

[workspace.package]
version = "0.1.0-rc.1"
edition = "2024"
rust-version = "1.95"
publish = false
authors = ["Sensmetry <opensource@sensmetry.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sensmetry/sysand"
description = "A package manager for SysML v2 and KerML"
documentation = "https://client.sysand.com"
homepage = "https://sysand.com"

[workspace.dependencies]
camino = { version = "1.2", features = ["serde1"] }
sha2 = { version = "0.11", default-features = false }
hex = "0.4.3"
