[package]
name = "sysand-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["log/std", "wasm-bindgen/std", "thiserror/std", "typed-path/std", "url/std", "futures/std"]
# Whether we should be more lenient when validating data in cases where the
# KerML specification is vague.
lenient_checks = []
# Binding support (but not binding libraries themselves)
python = ["dep:pyo3"]
js = ["dep:wasm-bindgen"]
filesystem = ["dep:tempfile", "dep:dirs", "dep:zip"]
networking = ["dep:partialzip", "dep:reqwest", "dep:gix"] # "dep:reqwest-middleware"
alltests = []

[dependencies]
anstyle = { version = "1.0.11", default-features = false }
# General
borrow-or-share = { version = "0.2.2", default-features = false }
chrono = { version = "0.4.41", features = ["now", "serde"] }
digest = { version = "0.10.7", default-features = false }
dirs = { version = "6.0.0", optional = true}
fluent-uri = { version = "0.4.0", features = ["serde"] }
indexmap = { version = "2.10.0", default-features = false, features = ["serde"] }
# icu_normalizer = { version = "2.0.0", default-features = false, features = ["compiled_data"] }
log = { version = "0.4.27", default-features = false }
pubgrub = { version = "0.3.0", default-features = false }
partialzip = { version = "5.0.0", default-features = false, optional = true }
pyo3 = { version = "0.27.0", default-features = false, features = ["macros", "chrono", "indexmap"], optional = true }
reqwest = { version = "0.12.23", optional = true, features = ["stream"] }
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["preserve_order"] }
sha2 = { version = "0.10.9", default-features = false }
tempfile = { version = "3.20.0", default-features = false, optional = true }
thiserror = { version = "2.0.12", default-features = false }
toml = "0.9.5"
typed-path = { version = "0.12.0", default-features = false }
walkdir = "2.5.0"
# unicode-normalization = { version = "0.1.24", default-features = false }
wasm-bindgen = { version = "0.2.105", default-features = false, optional = true }
zip = { version = "6.0.0", default-features = false, optional = true }
url = { version = "2.5.7", default-features = false }
gix = { version = "0.74.0", default-features = false, optional = true, features = ["blocking-http-transport-reqwest", "blocking-network-client", "worktree-mutation"] }
logos = "0.15.1"
futures = { version = "0.3.31", default-features = false, features = ["alloc", "async-await"] }
tokio = { version = "1.47.1", default-features = false, features = ["rt", "io-util"] }
reqwest-middleware = { version = "0.4.2", default-features = false }
bytes = { version = "1.10.1", default-features = false }
toml_edit = { version = "0.23.2", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.1.1"
mockito = "1.7.0"
port_check = "0.3.0"
predicates = "3.1.3"
tempfile = { version = "3.20.0", default-features = false }
zip = "6.0.0"
