[package]
name = "sysand-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[features]
default = ["std"]
std = ["log/std", "wasm-bindgen?/std", "thiserror/std", "typed-path/std", "url/std", "futures/std"]
# Whether we should be more lenient when validating data in cases where the
# KerML specification is vague.
lenient_checks = []
# Binding support (but not binding libraries themselves)
python = ["dep:pyo3"]
js = ["dep:wasm-bindgen"]
filesystem = ["dep:camino-tempfile", "dep:dirs", "dep:zip"]
networking = ["dep:reqwest", "dep:gix"] # "dep:reqwest-middleware", "dep:partialzip"
alltests = []

[dependencies]
# General
camino.workspace = true
camino-tempfile = { version = "1.4", optional = true }
anstyle = { version = "1.0.13", default-features = false }
borrow-or-share = { version = "0.2.4", default-features = false }
chrono = { version = "0.4.42", features = ["now", "serde"] }
digest = { version = "0.10.7", default-features = false }
dirs = { version = "6.0.0", optional = true}
fluent-uri = { version = "0.4.1", features = ["serde"] }
indexmap = { version = "2.12.1", default-features = false, features = ["serde"] }
# icu_normalizer = { version = "2.0.0", default-features = false, features = ["compiled_data"] }
log = { version = "0.4.29", default-features = false }
pubgrub = { version = "0.3.0", default-features = false }
# partialzip = { version = "5.0.0", default-features = false, optional = true }
pyo3 = { version = "0.27.2", default-features = false, features = ["macros", "chrono", "indexmap"], optional = true }
reqwest-middleware = { version = "0.5.0", features = ["multipart"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["preserve_order"] }
sha2 = { version = "0.10.9", default-features = false }
spdx = "0.13.2"
thiserror = { version = "2.0.17", default-features = false }
toml = "0.9.8"
typed-path = { version = "0.12.0", default-features = false }
walkdir = "2.5.0"
# unicode-normalization = { version = "0.1.24", default-features = false }
wasm-bindgen = { version = "0.2.106", default-features = false, optional = true }
zip = { version = "6.0.0", default-features = false, optional = true }
url = { version = "2.5.7", default-features = false }
gix = { version = "0.77.0", default-features = false, optional = true, features = ["blocking-http-transport-reqwest", "blocking-network-client", "worktree-mutation"] }
logos = "0.15.1"
futures = { version = "0.3.31", default-features = false, features = ["alloc", "async-await"] }
tokio = { version = "1.48.0", default-features = false, features = ["rt", "io-util"] }
bytes = { version = "1.11.0", default-features = false }
toml_edit = { version = "0.23.9", features = ["serde"] }
globset = { version = "0.4.18", default-features = false }

# Use native TLS only on Windows and Apple OSs
[target.'cfg(any(target_os = "windows", target_vendor = "apple"))'.dependencies]
reqwest = { version = "0.13.1", optional = true, default-features = false, features = ["native-tls", "http2", "system-proxy", "stream", "multipart"] }
[target.'cfg(not(any(target_os = "windows", target_vendor = "apple")))'.dependencies]
reqwest = { version = "0.13.1", optional = true, features = ["rustls", "stream", "multipart"] }

[dev-dependencies]
assert_cmd = "2.1.1"
mockito = "1.7.1"
port_check = "0.3.0"
predicates = "3.1.3"
tempfile = { version = "3.23.0", default-features = false }
zip = "6.0.0"
