[package]
name = "sysand-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
itertools = { version = "0.14.0", default-features = false  }
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"
