[package]
name = "sysand"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["anyhow/std", "clap/std", "fluent-uri/std", "log/std", "toml/std", "typed-path/std"]
alltests = []

[dependencies]
# General
anyhow = { version = "1.0.98", default-features = false }
clap = { version = "4.5.40", default-features = false, features = ["derive", "unicode", "help", "cargo", "color", "env", "suggestions", "usage"] }
env_logger = "0.11.8"
log = { version = "0.4.27", default-features = false }
sysand-core = { path = "../core", features = ["std", "filesystem", "networking"] }
thiserror = "2.0.12"
toml = { version = "0.9.5", default-features = false }
semver = "1.0.26"
serde_json = { version = "1.0.140", default-features = false }
fluent-uri = { version = "0.4.0", default-features = false }
typed-path = { version = "0.12.0", default-features = false }
reqwest = { version = "0.12.23", features = ["blocking"] }
url = { version = "2.5.7", default-features = false }
# Enables a bunch of additional compression/encryption features not enabled by default in sysand-core
zip = { version = "6.0.0" }
pubgrub = { version = "0.3.0", default-features = false }
indexmap = "2.11.1"
tokio = { version = "1.47.1", default-features = false }
reqwest-middleware = { version = "0.4.2", default-features = false }

[dev-dependencies]
assert_cmd = "2.0.17"
glob = "0.3.3"
mockito = "1.7.0"
predicates = "3.1.3"
tempfile = "3.20.0"
url = "2.5.7"
zip = "6.0.0"

[target.'cfg(not(windows))'.dev-dependencies]
rexpect = "0.6.2"
