[package]
name = "sysand"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[features]
default = ["std"]
std = ["anyhow/std", "clap/std", "fluent-uri/std", "log/std", "toml/std", "typed-path/std"]
alltests = []
# Different compression methods for creating kpar
kpar-bzip2 = ["sysand-core/kpar-bzip2"]
kpar-zstd = ["sysand-core/kpar-zstd"]
kpar-xz = ["sysand-core/kpar-xz"]
kpar-ppmd = ["sysand-core/kpar-ppmd"]

[dependencies]
# General
camino.workspace = true
camino-tempfile = "1.4"
anstream = "0.6.21"
anyhow = "1.0.100"
clap = { version = "4.5.53", default-features = false, features = ["derive", "unicode", "help", "cargo", "color", "env", "suggestions", "usage"] }
env_logger = "0.11.8"
log = { version = "0.4.29", default-features = false }
sysand-core = { path = "../core", features = ["std", "filesystem", "networking"] }
thiserror = "2.0.17"
toml = { version = "0.9.8", default-features = false }
semver = "1.0.27"
serde_json = { version = "1.0.145", default-features = false }
spdx = "0.13.2"
fluent-uri = { version = "0.4.1", default-features = false }
typed-path = { version = "0.12.0", default-features = false }
url = { version = "2.5.7", default-features = false }
# Enables a bunch of additional compression/encryption features not enabled by default in sysand-core
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
pubgrub = { version = "0.3.0", default-features = false }
indexmap = "2.12.1"
tokio = { version = "1.48.0", default-features = false }
reqwest-middleware = { version = "0.5.0" }

# Use native TLS only on Windows and Apple OSs
[target.'cfg(any(target_os = "windows", target_vendor = "apple"))'.dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["native-tls", "http2", "system-proxy", "blocking"] }
[target.'cfg(not(any(target_os = "windows", target_vendor = "apple")))'.dependencies]
reqwest = { version = "0.13.1", features = ["rustls", "blocking"] }

[dev-dependencies]
assert_cmd = "2.1.1"
glob = "0.3.3"
mockito = "1.7.1"
predicates = "3.1.3"
tempfile = "3.23.0"
url = "2.5.7"
zip = "6.0.0"

[target.'cfg(not(windows))'.dev-dependencies]
rexpect = "0.6.2"
