[package]
name = "sysand-java"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "sysand"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
sysand-core = { path = "../../core", features = ["std", "filesystem", "networking"] }
indexmap = { version = "2.10.0", default-features = false, features = ["serde"] }
reqwest = "0.12.23"
url = { version = "2.5.7", default-features = false }