[package]
name = "sysand-js"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
sysand-core = { path = "../../core", features = ["js"] }
camino.workspace = true
serde_json = { version = "1.0.149", default-features = false }
thiserror = "2.0.18"
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3.85", default-features = false, optional = true, features = ["Window", "Storage"] }
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1.0.228", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
console_log = "1.0.0"
log = { version = "0.4.29", default-features = false }
typed-path = { version = "0.12.1", default-features = false }

[dev-dependencies]
regex = { version = "1.12.2", default-features = false, features = ["unicode-perl"] }
semver = { version = "1.0.27", default-features = false }
wasm-bindgen-test = "0.3.58"

[features]
default = ["browser"]
browser = ["dep:web-sys"]
