[package]
name = "sysand-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[features]
default = ["extension-module", "abi3"]
extension-module = ["pyo3/extension-module"]
abi3 = ["pyo3/abi3", "pyo3/abi3-py38"]

[dependencies]
sysand-core = { path = "../../core", features = ["python", "filesystem", "networking"] }
sysand = { path = "../../sysand" }
camino.workspace = true
pyo3 = { version = "0.28.2", default-features = false, features = ["macros"] }
pyo3-log = "0.13.3"
semver = { version = "1.0.27", default-features = false }
typed-path = { version = "0.12.3", default-features = false, features= ["std"] }
url = { version = "2.5.8", default-features = false }
reqwest-middleware = "0.5.1"
tokio = { version = "1.49.0", default-features = false, features = ["rt"] }

# Use native TLS only on Windows and Apple OSs
[target.'cfg(any(target_os = "windows", target_vendor = "apple"))'.dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["native-tls", "http2", "system-proxy"] }
[target.'cfg(not(any(target_os = "windows", target_vendor = "apple")))'.dependencies]
reqwest = { version = "0.13.2", features = ["rustls"] }

[dev-dependencies]
predicates = "3.1.4"
tempfile = "3.25.0"
