[package]
name = "sysand-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[features]
default = ["extension-module", "abi3"]
extension-module = ["pyo3/extension-module"]
abi3 = ["pyo3/abi3", "pyo3/abi3-py38"]

[dependencies]
sysand-core = { path = "../../core", features = ["python", "filesystem", "networking"] }
sysand = { path = "../../sysand" }
camino.workspace = true
pyo3 = { version = "0.27.2", default-features = false, features = ["macros"] }
pyo3-log = "0.13.2"
semver = { version = "1.0.27", default-features = false }
typed-path = { version = "0.12.0", default-features = false, features= ["std"] }
url = { version = "2.5.7", default-features = false }
tokio = { version = "1.48.0", default-features = false, features = ["rt"] }
reqwest-middleware = { version = "0.5.0" }
reqwest = { version = "0.13.1", features = ["rustls"] }

[dev-dependencies]
predicates = "3.1.3"
tempfile = "3.23.0"
