[package]
name = "sysand-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[features]
default = ["extension-module", "abi3"]
extension-module = ["pyo3/extension-module"]
abi3 = ["pyo3/abi3", "pyo3/abi3-py38"]
kpar-bzip2 = ["sysand-core/kpar-bzip2", "sysand/kpar-bzip2"]
kpar-zstd = ["sysand-core/kpar-zstd", "sysand/kpar-zstd"]
kpar-xz = ["sysand-core/kpar-xz", "sysand/kpar-xz"]
kpar-ppmd = ["sysand-core/kpar-ppmd", "sysand/kpar-ppmd"]

[dependencies]
sysand-core = { path = "../../core", features = ["python", "filesystem", "networking"] }
sysand = { path = "../../sysand" }
camino.workspace = true
pyo3 = { version = "0.28.2", default-features = false, features = ["macros"] }
pyo3-log = "0.13.3"
semver = { version = "1.0.27", default-features = false }
typed-path = { version = "0.12.3", default-features = false, features= ["std"] }
url = { version = "2.5.8", default-features = false }
tokio = { version = "1.50.0", default-features = false, features = ["rt"] }
reqwest-middleware = "0.5.1"
reqwest = { version = "0.13.2", features = ["rustls"] }

[dev-dependencies]
predicates = "3.1.4"
tempfile = "3.26.0"
