[build-system]
requires = ["maturin>=1.12.6,<2"]
build-backend = "maturin"

[project]
name = "sysand"
description = "A package manager for SysML v2 and KerML"
license = "MIT OR Apache-2.0"
dynamic = ["version"]
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
]
# TODO: create a proper readme and/or docs to document
# what is available in bindings
readme = "README.md"
maintainers = [
    { name = "Sensmetry", email = "opensource@sensmetry.com" }
]
import-names = ["sysand"]

[project.urls]
documentation = "https://docs.sysand.org"
homepage = "https://beta.sysand.org"
source = "https://github.com/sensmetry/sysand"
issues = "https://github.com/sensmetry/sysand/issues"
forum = "https://forum.sensmetry.com/c/sysand/24"

[project.scripts]
sysand = "sysand.__main__:main"

[dependency-groups]
dev = [
    "maturin>=1.12.6,<2",
    "pytest>=9.0.2,<10",
    "pytest-httpserver>=1.1.3,<2",
]
linters = [
    "mypy>=1.19.1,<2",
    "ruff>=0.14.13,<1",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "sysand._sysand_core"
# TODO: reenable once version after 1.12.6 is released; it will contain
# https://github.com/PyO3/maturin/commit/54fc6dd3adf10025e910d43a231b2ec1742a4480
# (also bump maturin version in requires)
# strip = true

# pytest is used for running Python based tests
#
# ref: https://docs.pytest.org/en/stable/
#
[tool.pytest.ini_options]
addopts = "--verbose --color=yes --durations=10"
testpaths = ["tests"]
